[-] MO: Blockbanner Fix #PSCSX-578, little css bug on safari

--- a/themes/default-bootstrap/sass/modules/blockbanner/blockbanner.scss
+++ b/themes/default-bootstrap/sass/modules/blockbanner/blockbanner.scss
@@ -7,4 +7,6 @@
 	display: block;
 	width: 100%;
 	height: 100%;
+  	max-height: 65px;
+  	max-width: 1170px;
 }
